fixing broken image link

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div id="container1">
             <div class="info-section" id="profile">
-                <img src="images/Headshot.jpeg" alt="Headshot of Stephen Dowling, smiling with glasses">
+                <img src="Images/Headshot.jpeg" alt="Headshot of Stephen Dowling, smiling with glasses">
                     <h2>Profile</h2>
                         <p>I am a highly-skilled and dynamic Operations Support Administrator bringing forth the ability to work effectively and efficiently both individually and as part of a team. I am resourceful, self-motivated and committed to continually advancing my knowledge in relevant areas. I am results orientated with a proven track record of improving overall operations within a department. <a href="#skills">Click here</a> to see my key transferrable skills</p>
                 
