--- a/Cover letter/index.html
+++ b/Cover letter/index.html
@@ -1,7 +1,9 @@
 <!-- 
- * CoverLetter/index.html
+/*
+ * CVStyle.css
  * S Dowling x21189994@student.ncirl.ie
- * 18 02 2023
+ * 06 02 2023
+ */
 -->
 
 <!DOCTYPE html>
