--- a/index.html
+++ b/index.html
@@ -1,89 +1,100 @@
 <!-- 
  * index.html
  * S Dowling x21189994@student.ncirl.ie
- * 18 02 2023
+ * 27 02 2023
 -->
 
 <!DOCTYPE html>
 <html>
     <head>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
         <title>
             Stephen Dowling CV
         </title>
         <link rel="stylesheet" href="Style/style.css">
     </head>
     <body>
-        <div id="header">
-            <h1>Stephen Dowling</h1>
-                <h3>x21189994@student.ncirl.ie +353857808163</h3>
-        </div>
-        <div id="container1">
-            <div class="info-section" id="profile">
-                <img src="Images/Headshot.jpeg" alt="Headshot of Stephen Dowling, smiling with glasses">
-                    <h2>Profile</h2>
-                        <p>I am a highly-skilled and dynamic Operations Support Administrator bringing forth the ability to work effectively and efficiently both individually and as part of a team. I am resourceful, self-motivated and committed to continually advancing my knowledge in relevant areas. I am results orientated with a proven track record of improving overall operations within a department. <a href="#skills">Click here</a> to see my key transferrable skills</p>
-                
-            </div>
-            <div class="info-section" id="education">
-        <h2>Education</h2>
-            <h3>Institute of Banking (UCD), QFA in Professional Financial Advice, 2019 - 2020</h3>
-                <p>Completed the QFA Certificate in Professional Financial Advice while working full time so as to enhance my ability to deliver high quality service to both customers and colleagues.</p>
-                <p>Passed all six exams without repeat in a 12 month period.</p>
-            <h3>Dublin City University, BSc. in Psychology, 2013 - 2017</h3>
-                <p>Graduated with a 2.1 Honours degree.</p>
-                <p>Allowed me to develop substantial research skills as it required completion of various assignments that involved navigating complex databases and searching for articles related to a particular subject in Psychology.</p>
-                <p>Involved working as an individual as well as working in group projects to meet deadlines and achieve a common goal.</p>
-                <p>Completed a thesis on factors that can influence alcohol consumption among college students. This involved complex data entry and analysis so as to determine the statistic significance of my findings.</p>
-            </div>
-            <div class="info-section" id="experience">
-        <h2>Experience</h2>
-            <h3>Operations Support Administrator, Bank of Ireland, September 2018 - Present</h3>
-                <p>Supports colleagues in both the UK and Ireland as part of the Change of Address team in maintaining a high level of customer service in a risk aware environment. This role involves navigation of complex IBM software and databases to ensure customers are served brilliantly.</p>
-                <p>Consistently managed risk while working on the Centralised Account Opening team. Involved maintaining an awareness of financial fraud as well as performing Customer Due Diligence checks and following Anti-Money Laundering procedures and regulations for the bank.</p>
-                <p>Continuously delivers to ensure deadlines are met under pressure as part of the Duplicate Statements and Interest & Balance Certificates team. Involves communicating effectively with several different departments across the bank to maintain a high level of service.</p>
-                <p>Mitigated risk and investigated complaints as part of the Cheque Verification team, while striving to deliver excellent service to customers and colleagues across the country. This role required a high level of attention to detail due to the higher risk of fraud.</p>
-                <p>Completed a QFA in Financial Advice while working full time, in an effort to enhance my skill set and improve the quality of service I can deliver to both customers and my colleagues.</p>
-            <h3>Cash Administrator, Cineworld, May, 2017 - September, 2018</h3>
-                <p>Responsible for ensuring all the takings were accounted for at the close of and the opening of the business day. As such, responsible for handling large amounts of cash and securing cash collections and verifying deliveries were carried out as per procedure.</p>
-                <p>Responsible for fixing technical issues including those involving points-of- sale and automated kiosks.</p>
-                <p>Covered day to day Finance manager duties for the manager when they were off site for the largest cinema in Ireland, including dealing face to face with customer complaints.</p>
-                <p>General office duties including filing, printing, data entry and meeting deadlines, as well as operating both Microsoft Office and specific Vista cash flow software.</p>
-            <h3>Multifunctional Team Member, Cineworld, March, 2015 - May, 2017</h3>
-                <p>Delivering and maintaining a high level of customer service throughout the cinema</p>
-                <p>Food and drink preparation, as well as the safe handling of cleaning agents and safety equipment</p>
-                <p>Cash handling in a fast paced and high stress environment, dynamically dealing with problems as they arose and worked flexibly to find solutions</p>
-                <p>Working with digital projectors and working at height while maintaining a 'safety first' approach.</p>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-sm-5 show center">
+                    <img src="images/Headshot.jpeg" alt="Headshot of Stephen Dowling, smiling with glasses">
+                </div>
+                <div class="col-lg-8 col-sm-5 show center">
+                    <h1>Stephen Dowling</h1>
+                    <h3>x21189994@student.ncirl.ie +353857808163</h3>
                 </div>
             </div>
-        <div id="container2">
-            <div id="skills">
-            <h2>Key Transferrable Skills</h2>
-            <ul>
-                <li>Time Management</li>
-                <li>Organised</li>
-                <li>Risk Aware</li>
-                <li>Dedicated team player</li>
-                <li>Attention to detail</li>
-                <li>Critical thinking</li>
-                <li>Hard-working</li>
-                <li>Customer Service</li>
-                <li>Interpersonal Communication</li>
-                <li>Computer literacy</li>
-                <li>Data collection, entry & analysis</li>
-                <li>Collaboration & Teamwork</li>
-                <li>Analytical thinking</li>
-            </ul>
+            <div class="row">
+                <div class="col-lg-5 col-sm-12 show">
+                    <h2>Profile</h2>
+                        <p>I am a highly-skilled and dynamic Operations Support Administrator bringing forth the ability to work effectively and efficiently both individually and as part of a team. I am resourceful, self-motivated and committed to continually advancing my knowledge in relevant areas. I am results orientated with a proven track record of improving overall operations within a department. <a href="#skills">Click here</a> to see my key transferrable skills</p>
+                </div>
+                <div class="col-lg-5 col-sm-12 show">
+                    <h2>Education</h2>
+                        <h3>Institute of Banking (UCD), QFA in Professional Financial Advice, 2019 - 2020</h3>
+                            <p>Completed the QFA Certificate in Professional Financial Advice while working full time so as to enhance my ability to deliver high quality service to both customers and colleagues.</p>
+                            <p>Passed all six exams without repeat in a 12 month period.</p>
+                        <h3>Dublin City University, BSc. in Psychology, 2013 - 2017</h3>
+                            <p>Graduated with a 2.1 Honours degree.</p>
+                            <p>Allowed me to develop substantial research skills as it required completion of various assignments that involved navigating complex databases and searching for articles related to a particular subject in Psychology.</p>
+                            <p>Involved working as an individual as well as working in group projects to meet deadlines and achieve a common goal.</p>
+                            <p>Completed a thesis on factors that can influence alcohol consumption among college students. This involved complex data entry and analysis so as to determine the statistic significance of my findings.</p>
+                </div>
             </div>
-            <div id="references">
-            <h2>References</h2>
-            <ul>
-            <li>John Smith 0851234567</li>
-            <li>Jackie Smith 0851234567</li>
-            </ul>
+            <div class="row">
+                <div class="col-lg-12 col-sm-12 show">
+                    <h2>Experience</h2>
+                        <h3>Operations Support Administrator, Bank of Ireland, September 2018 - Present</h3>
+                            <p>Supports colleagues in both the UK and Ireland as part of the Change of Address team in maintaining a high level of customer service in a risk aware environment. This role involves navigation of complex IBM software and databases to ensure customers are served brilliantly.</p>
+                            <p>Consistently managed risk while working on the Centralised Account Opening team. Involved maintaining an awareness of financial fraud as well as performing Customer Due Diligence checks and following Anti-Money Laundering procedures and regulations for the bank.</p>
+                            <p>Continuously delivers to ensure deadlines are met under pressure as part of the Duplicate Statements and Interest & Balance Certificates team. Involves communicating effectively with several different departments across the bank to maintain a high level of service.</p>
+                            <p>Mitigated risk and investigated complaints as part of the Cheque Verification team, while striving to deliver excellent service to customers and colleagues across the country. This role required a high level of attention to detail due to the higher risk of fraud.</p>
+                            <p>Completed a QFA in Financial Advice while working full time, in an effort to enhance my skill set and improve the quality of service I can deliver to both customers and my colleagues.</p>
+                        <h3>Cash Administrator, Cineworld, May, 2017 - September, 2018</h3>
+                            <p>Responsible for ensuring all the takings were accounted for at the close of and the opening of the business day. As  such, responsible for handling large amounts of cash and securing cash collections and verifying deliveries were carried out as per procedure.</p>
+                            <p>Responsible for fixing technical issues including those involving points-of- sale and automated kiosks.</p>
+                            <p>Covered day to day Finance manager duties for the manager when they were off site for the largest cinema in Ireland, including dealing face to face with customer complaints.</p>
+                            <p>General office duties including filing, printing, data entry and meeting deadlines, as well as operating both Microsoft Office and specific Vista cash flow software.</p>
+                        <h3>Multifunctional Team Member, Cineworld, March, 2015 - May, 2017</h3>
+                            <p>Delivering and maintaining a high level of customer service throughout the cinema</p>
+                            <p>Food and drink preparation, as well as the safe handling of cleaning agents and safety equipment</p>
+                            <p>Cash handling in a fast paced and high stress environment, dynamically dealing with problems as they arose and worked flexibly to find solutions</p>
+                            <p>Working with digital projectors and working at height while maintaining a 'safety first' approach.</p>
+                    </div>
+                </div>
+            <div class="row">
+                <div class="col-lg-5 col-sm-12  show" id="skills">
+                    <h2>Key Transferrable Skills</h2>
+                        <ul>
+                            <li>Time Management</li>
+                            <li>Organised</li>
+                            <li>Risk Aware</li>
+                            <li>Dedicated team player</li>
+                            <li>Attention to detail</li>
+                            <li>Critical thinking</li>
+                            <li>Hard-working</li>
+                            <li>Customer Service</li>
+                            <li>Interpersonal Communication</li>
+                            <li>Computer literacy</li>
+                            <li>Data collection, entry & analysis</li>
+                            <li>Collaboration & Teamwork</li>
+                            <li>Analytical thinking</li>
+                        </ul>
+                </div>
+                <div class="col-lg-5 col-sm-12 show">
+                    <h2>References</h2>
+                        <ul>
+                            <li>John Smith 0851234567</li>
+                            <li>Jackie Smith 0851234567</li>
+                        </ul>
+                </div>
             </div>
-            <div id="footer">
-                <a href="Cover letter/index.html">Cover Letter</a>
-                <a href="https://www.linkedin.com/in/stephen-dowling-lib-qfa-7ba162165/">LinkedIn</a>
+            <div class="row">
+                <div class="col-lg-12 col-sm-12 show center">
+                    <a href="Cover letter/index.html">Cover Letter</a>
+                    <a href="https://www.linkedin.com/in/stephen-dowling-lib-qfa-7ba162165/">LinkedIn</a>
+                </div>
             </div>
         </div>
     </body>
