fixing image link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-sm-5 show center">
-                    <img src="images/Headshot.jpeg" alt="Headshot of Stephen Dowling, smiling with glasses">
+                    <img src="Images/Headshot.jpeg" alt="Headshot of Stephen Dowling, smiling with glasses">
                 </div>
                 <div class="col-lg-8 col-sm-5 show center">
                     <h1>Stephen Dowling</h1>
