--- a/Cover letter/index.html
+++ b/Cover letter/index.html
@@ -9,12 +9,69 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
         <title>
             Stephen Dowling Cover Letter
         </title>
         <link rel="stylesheet" href="../Style/style.css">
     </head>
     <body>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 show">
+                    <h1>Cover Letter</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-3 col-sm-12 show ">
+                    <p>
+                        Your Address
+                        <br />
+                        Telephone Number
+                        <br />
+                        Date
+                        <br />
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-3 col-sm-12 show">
+                    <p>
+                        Name of contact person
+                        <br />
+                        Title
+                        <br />
+                        Name of Organisation 
+                        <br />
+                        Address
+                        <br />
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 col-sm-12 show">
+                    <p>Dear Sir/Madam,</p>
+                    <p>Identify yourself: then indicate the position for which you are applying and state where you learned about the vacancy (Careers Service, newspaper, etc.).
+                    </p>
+                    <p>State why you are interested in this work and this organisation. Briefly mention your academic background, relevant qualification(s), and related work experience which qualify you for the position. Summarise your talents and how they might benefit the employer. (Remember, you are seeking to persuade the reader to see you).</p>
+                    <p>Refer to the fact that you have enclosed your CV or application form, and draw attention to any further points of relevance to your application.</p>
+                    <p>Reiterate your interest and indicate your availability for interview. Close your letter with a confident statement which will encourage a positive response.</p>
+                    <p>Yours sincerely</p>
+                    <p>Stephen Dowling</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 col-sm-12 show center">
+                    <a href="../index.html">CV</a>
+                    <a href="https://www.linkedin.com/in/stephen-dowling-lib-qfa-7ba162165/">LinkedIn</a>
+                </div>
+            </div>
+        </div>
+
+
+
+        <!--
         <div id="header">
             <h1>Cover Letter</h1>
         </div>
@@ -55,6 +112,6 @@
         <div id="footer">
                 <a href="../index.html">CV</a>
                 <a href="https://www.linkedin.com/in/stephen-dowling-lib-qfa-7ba162165/">LinkedIn</a>
-        </div>
+        </div> -->
     </body>
 </html>
