--- a/Cover letter/index.html
+++ b/Cover letter/index.html
@@ -1,9 +1,9 @@
 <!-- 
-/*
- * CVStyle.css
+
+ * index.html Cover Letter
  * S Dowling x21189994@student.ncirl.ie
- * 06 02 2023
- */
+ * 27 02 2023
+ 
 -->
 
 <!DOCTYPE html>
