--- a/Cover letter/index.html
+++ b/Cover letter/index.html
@@ -1,9 +1,7 @@
-<!-- 
-
+<!--
  * index.html Cover Letter
  * S Dowling x21189994@student.ncirl.ie
  * 27 02 2023
- 
 -->
 
 <!DOCTYPE html>
@@ -24,7 +22,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-3 col-sm-12 show ">
+                <div class="col-lg-3 col-sm-12 show right">
                     <p>
                         Your Address
                         <br />
