--- a/Cover letter/index.html
+++ b/Cover letter/index.html
@@ -17,7 +17,7 @@
     <body>
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 show">
+                <div class="col-lg-12 show center">
                     <h1>Cover Letter</h1>
                 </div>
             </div>
